syntax = "proto3";

option go_package = "genproto/users_service";
package users_service;
import "teacher_service.proto";

service TaskService{
    rpc Create(CreateTask) returns(Task){}
    rpc GetById(TaskPrimaryKey) returns(Task){}
    rpc GetList(GetListTaskRequest) returns(GetListTaskResponse){}
    rpc Update(UpdateTask) returns(Task){}
    rpc Delete(TaskPrimaryKey) returns(Empty){}
}

message TaskPrimaryKey{
    string id = 1;
}


message Task{
    string id = 1;
    string lesson_id = 2;
    string label = 3;
    string deadline = 4;
    int64 score = 5;
    string created_at = 6;
    string updated_at = 7;
}


message CreateTask{
    string lesson_id = 1;
    string label = 2;
    string deadline = 3;
    int64 score = 4;
}

message UpdateTask{
    string id = 1;
    string lesson_id = 2;
    string label = 3;
    string deadline = 4;
    int64 score = 5;
}

message GetListTaskRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListTaskResponse{
    int64 count = 1;
    repeated Task tasks = 2;
}